--- a/css/theme.css
+++ b/css/theme.css
@@ -1,25 +1,25 @@
 :root {
   /* default light theme */
-  --primary-color-: rgba(255, 255, 255, 1);
-  --primary-color-50: #0d0d0d;
-  --primary-color-100: #1a1a1a;
-  --ion-text-color-step-150: #262626;
-  --ion-text-color-step-200: #333333;
-  --ion-text-color-step-250: #404040;
-  --ion-text-color-step-300: #4d4d4d;
-  --ion-text-color-step-350: #595959;
-  --ion-text-color-step-400: #666666;
-  --ion-text-color-step-450: #737373;
-  --ion-text-color-step-500: #808080;
-  --ion-text-color-step-550: #8c8c8c;
-  --ion-text-color-step-600: #999999;
-  --ion-text-color-step-650: #a6a6a6;
-  --ion-text-color-step-700: #b3b3b3;
-  --ion-text-color-step-750: #bfbfbf;
-  --ion-text-color-step-800: #cccccc;
-  --ion-text-color-step-850: #d9d9d9;
-  --ion-text-color-step-900: #e6e6e6;
-  --ion-text-color-step-950: #f2f2f2;
+  --primary-color-: ;
+  --primary-color-50: rgba(255, 255, 255, 1);
+  --primary-color-100: rgba(255, 255, 255, 1);
+  --primary-color-150: rgba(255, 255, 255, 1);
+  --primary-color-200: rgba(255, 255, 255, 1);
+  --primary-color-250: rgba(255, 255, 255, 1);
+  --primary-color-300: rgba(255, 255, 255, 1);
+  --primary-color-350: #595959;
+  --primary-color-400: rgba(255, 255, 255, 1);
+  --primary-color-450: rgba(255, 255, 255, 1);
+  --primary-color-500: #808080;
+  --primary-color-550: #8c8c8c;
+  --primary-color-600: #999999;
+  --primary-color-650: #a6a6a6;
+  --primary-color-700: #b3b3b3;
+  --primary-color-750: #bfbfbf;
+  --primary-color-800: #cccccc;
+  --primary-color-850: #d9d9d9;
+  --primary-color-900: #e6e6e6;
+  --primary-color-950: #f2f2f2;
   --secondary-color: rgba(33, 33, 33, 1);
   --tertiary-color: rgba(33, 33, 33, 1);
 
