--- a/index.css
+++ b/index.css
@@ -32,7 +32,7 @@ body {
   margin: 0;
   padding: 0;
   height: 100vh;
-  background: url("/assets/images/unnamed.webp");
+  background: url("./assets/images/unnamed.webp");
   background: radial-gradient(ellipse at center, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0) 100%), radial-gradient(ellipse at 80% 5%, #4c00ff 0%, rgb(255 40 184 / 0%) 30%), radial-gradient(ellipse at bottom left, #ff0076 0%, rgb(15 156 255 / 31%) 60%), linear-gradient(135deg, rgba(18, 46, 119, 0) 0%, rgba(18, 46, 119, 0) 75%, #395eff 100%), linear-gradient(82deg, #00c4ff 0%, #74b5ff 27%, #88b8ff 74%, #3b88ff 100%);
   background-blend-mode: screen, hue, color, overlay;
   background-size: cover;
