--- a/css/variables.css
+++ b/css/variables.css
@@ -1,1 +1,8 @@
-:root {}
+:root {
+  /* space variables */
+  --rsp-space-44px: 2.75rem;
+
+  --backdrop-filter-blur: 20px;
+
+  --letter-spacing-01-em: -.01em;
+}
