--- a/css/fonts.css
+++ b/css/fonts.css
@@ -30,4 +30,24 @@
   --font-family-sf-pro-text-semibold: 'SF Pro Text Semibold';
   --font-family-sf-pro-text-light: 'SF Pro Text Light';
   --font-family-sf-pro-icon-light: 'SF Pro Icon Light';
+
+  --font-size-12-px: 0.75rem;
+  --font-size-14-px: 0.875rem;
+  --font-size-16-px: 1rem;
+  --font-size-18-px: 1.125rem;
+  --font-size-20-px: 1.125rem;
+
+  --font-weight-400: 400;
+  --font-weight-500: 500;
+  --font-weight-600: 600;
+  --font-weight-700: 700;
+  --font-weight-800: 800;
+  --font-weight-900: 900;
+
+  --font-style-italic: italic;
+  --font-style-oblique: oblique;
+
+  --line-height-1: 1;
+
+  --font-sf-pro-small: var(--font-weight-400) var(--font-size-12-px)/var(--line-height-1) var(--font-family-sf-pro-text-light);
 }
