NEW: responsive header added sf pro text other version added like semibold, bold etc. two svg files added can be use in future mobile first approach started only desktop.css is required css animations module added

--- a/css/dark-light-toggler.css
+++ b/css/dark-light-toggler.css
@@ -4,21 +4,21 @@
 }
 
 .sun-and-moon> :is(.moon, .sun) {
-  fill: var(--secondary-color);
+  fill: var(--color-secondary);
 }
 
 .theme-changer:is(:hover, :focus-visible)>.sun-and-moon> :is(.moon, .sun) {
-  fill: var(--secondary-color-tint);
+  fill: var(--color-secondary-tint);
 }
 
 .sun-and-moon>.sun-beams {
-  stroke: var(--secondary-color-tint);
+  stroke: var(--color-secondary-tint);
   stroke-width: 2px;
   stroke-linecap: round;
 }
 
 .theme-changer:is(:hover, :focus-visible) .sun-and-moon>.sun-beams {
-  stroke: var(--secondary-color);
+  stroke: var(--color-secondary);
 }
 
 .dark .sun-and-moon>.sun {
