--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 @import url("./css/variables.css");
+@import url("./css/animation.css");
 @import url("./css/theme.css");
 @import url("./css/fonts.css");
 @import url("./css/dark-light-toggler.css");
@@ -13,6 +14,9 @@
   /* Internet Explorer/Edge */
   user-select: none;
   /* Standard syntax */
+
+  --header-height: var(--space-44px);
+  --header-backdrop-filter: var(--saturate-180-percentage) var(--filter-blur-20px);
 }
 
 .selectable {
@@ -33,51 +37,105 @@ body {
   display: flex;
   flex-direction: column;
 
-  color: var(--secondary-color);
-  background-color: var(--primary-color);
+  color: var(--color-secondary);
+  background-color: var(--color-primary);
 }
 
 header {
   width: 100%;
   top: 0;
-  position: sticky;
+  position: fixed;
 
   display: flex;
   justify-content: center;
   align-items: center;
 
   background-blend-mode: overlay;
-  backdrop-filter: blur(var(--backdrop-filter-blur));
-  -webkit-backdrop-filter: blur(var(--backdrop-filter-blur));
+  backdrop-filter: var(--header-backdrop-filter);
+  -webkit-backdrop-filter: var(--header-backdrop-filter);
 
-  max-height: var(--rsp-space-44px);
-  background-color: var(--primary-color-shade);
+  max-height: var(--header-height);
+  background-color: var(--color-primary);
+}
+
+header>nav {
+  width: inherit;
+  height: inherit;
+  margin: 0 auto;
+  padding: 0;
 }
 
 header>nav>ul {
+  margin: 0;
+  padding: 0 var(--space-16px);
+  width: auto;
+  height: inherit;
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header>nav>ul li {
+  height: var(--header-height);
+  display: flex;
+  align-items: center;
+}
+
+header>nav>ul>.submenu {
   width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  list-style: none;
+  padding-inline-end: var(--space-16px);
 }
 
-header>nav>ul>li>a {
-  text-decoration: none;
-  color: var(--secondary-color);
-  font: var(--font-sf-pro-small);
-  letter-spacing: var(--letter-spacing-01-em);
-}
-
-header>nav>ul>li>a:hover {
-  color: var(--secondary-color-shade);
-}
-
-.theme-changer {
+header>nav>ul li>a {
   border: 0;
+  padding: 0;
+  color: var(--color-secondary);
+  outline: none;
   cursor: pointer;
+  text-decoration: none;
   display: flex;
   justify-content: center;
   align-items: center;
   background: transparent;
+  -webkit-tap-highlight-color: transparent;
+  -moz-tap-highlight-color: transparent;
+}
+
+header>nav>ul li>a:hover {
+  color: var(--color-secondary-shade);
+}
+
+.responsive-menu {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  visibility: hidden;
+  /* overflow: hidden; */
+  padding-top: var(--header-height);
+  background-color: var(--color-primary-tint);
+  animation: var(--animation-slide-in-ease-out);
+}
+
+.responsive-menu>ul {
+  list-style: none;
+}
+
+.responsive-menu>ul>li>a {
+  border: 0;
+  text-decoration: none;
+  padding: var(--space-10px) 0 var(--space-11px) 0;
+  color: var(--color-secondary);
+  font: var(--font-sf-pro-display-semibold-large);
+  letter-spacing: var(--letter-spacing-007-em);
+}
+
+.bread-menu {
+  z-index: var(--z-index-1);
 }
