FIX: header structure become linear easy to understand

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -5,11 +5,12 @@
   }
 
   header>nav {
-    max-width: calc(var(--space-2px) * 215);
+    max-width: calc(var(--space-2px) * 200);
+    padding: 0;
   }
 
-  .theme-changer {
-    margin-left: calc(var(--space-2px) * 15);
+  header>nav>ul li:has(.theme-changer) {
+    margin: 0;
   }
 
   .responsive-menu {
@@ -23,12 +24,11 @@
   }
 
   .responsive-menu>ul {
-    width: 100%;
     height: var(--header-height);
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 0 0 0 calc(var(--space-2px) * 8);
+    padding: var(--space-1px) calc(var(--space-2px) * 8) 0 calc(var(--space-2px) * 8);
   }
 
   .responsive-menu>ul>li>a {
@@ -48,7 +48,7 @@
     width: max-content;
     position: relative;
   }
-  
+
   .developer>.ring {
     position: absolute;
     top: 34%;
