--- a/css/variables.css
+++ b/css/variables.css
@@ -15,6 +15,7 @@
   --letter-spacing-01-em: -.01em;
   --letter-spacing-007-em: .007em;
   --letter-spacing-002-em: .002em;
+  --letter-spacing-011-em: .011em;
 
   /* css filters */
   --filter-blur-20px: blur(20px);
