FIX: header fixes mobile responsive menu animation fix onclick header button clickable fix onclick of menu item responsive menu is not closing automatically fix

--- a/css/components.css
+++ b/css/components.css
@@ -22,3 +22,7 @@
   font: var(--font-sf-pro-display-medium);
   letter-spacing: var(--letter-spacing-011-em);
 }
+
+.pointer-events-none {
+  pointer-events: none;
+}
