--- a/css/animation.css
+++ b/css/animation.css
@@ -1,14 +1,32 @@
-@keyframes slideInText {
+@keyframes slideDown {
   0% {
+    visibility: hidden;
     opacity: 0;
-    transform: translateY(10px); /* Start below */
+    height: 0;
   }
+
   100% {
+    visibility: visible;
     opacity: 1;
-    transform: translateY(0); /* Move to normal position */
+    height: 100vh;
+  }
+}
+
+@keyframes slideUp {
+  from {
+    visibility: visible;
+    opacity: 1;
+    height: 100vh;
+  }
+
+  to {
+    visibility: hidden;
+    opacity: 0;
+    height: 0;
   }
 }
 
 :root {
-  --animation-slide-in-ease-out: slideInText 0.5s ease-out forwards;
+  --animation-slide-down: slideDown 0.24s cubic-bezier(.4, 0, .6, 1) forwards;
+  --animation-slide-up: slideUp 0.24s cubic-bezier(.4, 0, .6, 1) backwards;
 }
