--- a/css/variables.css
+++ b/css/variables.css
@@ -10,6 +10,7 @@
   /* z-index */
   --z-index-1: 1;
   --z-index-10: 10;
+  --z-index-100: 100;
 
   /* letter-spacing */
   --letter-spacing-01-em: -.01em;
