--- a/css/animation.css
+++ b/css/animation.css
@@ -26,7 +26,22 @@
   }
 }
 
+@keyframes blink {
+  0% {
+    opacity: 1;
+  }
+
+  50% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
 :root {
   --animation-slide-down: slideDown 0.24s cubic-bezier(.4, 0, .6, 1) forwards;
   --animation-slide-up: slideUp 0.24s cubic-bezier(.4, 0, .6, 1) backwards;
+  --animation-blink: blink 0.8s step-end infinite forwards;
 }
