--- a/css/desktop.css
+++ b/css/desktop.css
@@ -37,12 +37,16 @@
     font: var(--font-sf-pro-text-small);
   }
 
+  main {
+    padding: 0 15% 0 6%;
+  }
+
   #home {
     height: 100vh;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 12%;
+    gap: calc(var(--space-19px) * 10);
   }
 
   .developer {
@@ -58,10 +62,8 @@
   }
 
   #about {
-    padding: 0 12%;
   }
 
   #projects {
-    padding: calc(var(--space-2px) * 16) 12%;
   }
 }
