--- a/css/variables.css
+++ b/css/variables.css
@@ -6,6 +6,7 @@
   --space-5px: 0.3125rem;
   --space-7px: 0.4375rem;
   --space-11px: 0.6875rem;
+  --space-19px: 1.1875rem;
 
   /* z-index */
   --z-index-1: 1;
