--- a/index.css
+++ b/index.css
@@ -186,6 +186,7 @@ main {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  min-height: 100vh;
 }
 
 #about>section {
@@ -197,6 +198,7 @@ main {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  min-height: 100vh;
 }
 
 footer {
